--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </div>
                 <div class="col-sm-12 col-md-4">
                     <a href="fbb.html">
-                        <img src="assets/img/logo_Mesa de trabajo 1f.png" class="portada2" alt="udec">
+                        <img src="assets/img/fbb6.jpg" class="portada2" alt="udec">
                     </a> 
                 </div>
 
@@ -110,17 +110,17 @@
             <div class="row d-flex align-items-center justify-content-center g-3 p-5">
                 <div class="col-sm-12 col-md-4">
                     <a href="munay.html">
-                        <img src="assets/img/logo3_Mesa de trabajo 1m.png" class="portada2" alt="udec">
+                        <img src="assets/img/munay8.jpg" class="portada2" alt="udec">
                     </a> 
                 </div>
                 <div class="col-sm-12 col-md-4">
                     <a href="biss.html">
-                        <img src="assets/img/biss.png" class="portada2" alt="udec">
+                        <img src="assets/img/Captura de pantalla 2024-03-17 184742.png" class="portada2" alt="udec">
                     </a> 
                 </div>
                 <div class="col-sm-12 col-md-4">
                     <a href="portico.html">
-                        <img src="assets/img/logore_Mesa de trabajo 1p.png" class="portada2" alt="udec">
+                        <img src="assets/img/portico2.png" class="portada2" alt="udec">
                     </a> 
                 </div>
 
