--- a/index.html
+++ b/index.html
@@ -125,6 +125,20 @@
                 </div>
 
             </div>
+            <div class="row d-flex align-items-center justify-content-center g-3 p-5">
+                <div class="col-sm-12 col-md-4">
+                    <a href="#">
+                        <img src="assets/img/quickly.jpg" class="portada2" alt="udec">
+                    </a> 
+                </div>
+                <div class="col-sm-12 col-md-4">
+                    <a href="#">
+                        <img src="assets/img/conceptodeco.jpg" class="portada2" alt="udec">
+                    </a> 
+                </div>
+               
+
+            </div>
 
         </div>
     </section>
