--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                 <div class="navbar-nav">
                     <a class="nav-link active px-4" aria-current="page" href="#Presentacion">Inicio</a>
                     <a class="nav-link px-4" href="#habilidades">Softwares</a>
-                    <a class="nav-link px-4" href="#Portafolio">Web</a>
-                    <a class="nav-link px-4" href="#xd">Prototipado</a>
                     <a class="nav-link px-4" href="#identidad-visual">Branding</a>
                     <a class="nav-link px-4" href="#linea-gráfica">LíneaGráfica</a>
+                    <a class="nav-link px-4" href="#Portafolio">Web</a>
+                    <a class="nav-link px-4" href="#xd">Prototipado</a>
                     <a class="nav-link px-4" href="#educacion">Educación</a>
                     
                     
@@ -89,6 +89,7 @@
     <section id="identidad-visual">
         <div class="container-fluid text-center ">
             <h2>Identidad Visual</h2>
+            <h6>Haz click  sobre cada uno para verlos</h6>
             <div class="row d-flex align-items-center justify-content-center g-3 p-5">
                 <div class="col-sm-12 col-md-4">
                     <a href="croma.html">
@@ -127,12 +128,12 @@
             </div>
             <div class="row d-flex align-items-center justify-content-center g-3 p-5">
                 <div class="col-sm-12 col-md-4">
-                    <a href="#">
+                    <a href="">
                         <img src="assets/img/quickly.jpg" class="portada2" alt="udec">
                     </a> 
                 </div>
                 <div class="col-sm-12 col-md-4">
-                    <a href="#">
+                    <a href="">
                         <img src="assets/img/conceptodeco.jpg" class="portada2" alt="udec">
                     </a> 
                 </div>
@@ -148,6 +149,7 @@
     <section id="linea-gráfica" >
         <div class="container-fluid text-center ">
             <h2>Línea Gráfica</h2>
+            <h6>Haz click  sobre cada uno para verlos</h6>
             <div class="row d-flex align-items-center justify-content-center g-3 p-5" >
                 <div class="col-sm-12 col-md-4">
                     <a href="agencia.html">
