--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                 </p>
                 <div class="mb-3 pb-3 pt-3">
-                    <a href="https://drive.google.com/file/d/19cAKRLDBOU1R4rDqCK3UtVPcaYbS4D_g/view?usp=sharing" class="btn btn-primary" target="_blank">Curriculum</a>
+                    <a href="https://drive.google.com/file/d/1DZA0YkawHRtUw5sXzaSojxIA8g0SSAma/view?usp=sharing" class="btn btn-primary" target="_blank">Curriculum</a>
                 </div>
             </div>
         </div>
@@ -220,7 +220,7 @@
         </div>
     </section>
 
-    <section id="Portafolio">
+    <section id="Portafolio Web">
         <div class="container-fluid text-light text-center p-5 ">
             <h2 class="p-5 display-5 fw-bold text-light ">Portafolio</h2>
             <div class="row d-flex align-items-center p-5 ">
