--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@
         </div>
     </section>
 
-    <section id="Portafolio Web">
+    <section id="Portafolio">
         <div class="container-fluid text-light text-center p-5 ">
-            <h2 class="p-5 display-5 fw-bold text-light ">Portafolio</h2>
+            <h2 class="p-5 display-5 fw-bold text-light ">Portafolio Web</h2>
             <div class="row d-flex align-items-center p-5 ">
                 <div class="col-md-8 col-sm-12">
                     <div class="proyect">
