--- a/index.html
+++ b/index.html
@@ -220,6 +220,22 @@
         </div>
     </section>
 
+    <section id="InDesign">
+        <div class="container-fluid text-center ">
+            <h2>Editorial/InDesing</h2>
+            <div class="row d-flex align-items-center justify-content-center g-3 p-5">
+                <div class="col-sm-12 col-md-8">
+                    <img src="assets/img/b1992889275320.5fffa5a53c522.jpg" class="portada" alt="xd">
+                    
+                </div>
+               
+
+            </div>
+
+        </div>
+
+    </section>
+
     <section id="Portafolio">
         <div class="container-fluid text-light text-center p-5 ">
             <h2 class="p-5 display-5 fw-bold text-light ">Portafolio Web</h2>
