--- a/index.html
+++ b/index.html
@@ -260,6 +260,22 @@
 
     </section>
 
+    <section id="video">
+        <div class="container-fluid text-center ">
+            <h2 class="p-5 display-5 fw-bold ">Video After Effects</h2>
+            <h6>Haz click  sobre cada uno para verlos</h6>
+            <div class="row d-flex align-items-center justify-content-center g-3 p-5">
+                <div class="col-sm-12 col-md-4">
+                    <a href="https://youtu.be/9ahBMBbFdaA" target="_blank">
+                        <img src="assets/img/video.png" class="portada2" alt="video">
+                    </a> 
+                </div>
+
+            </div>
+
+        </div>
+    </section>
+
     <section id="Portafolio">
         <div class="container-fluid text-light text-center p-5 ">
             <h2 class="p-5 display-5 fw-bold text-light ">Portafolio Web</h2>
