--- a/index.html
+++ b/index.html
@@ -266,6 +266,16 @@
             <h6>Haz click  sobre cada uno para verlos</h6>
             <div class="row d-flex align-items-center justify-content-center g-3 p-5">
                 <div class="col-sm-12 col-md-4">
+                    <a href="https://youtu.be/VV6n9aVFW-8" target="_blank">
+                        <img src="assets/img/wevca.jpg" class="portada2" alt="videoca">
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                    </a> 
+                </div>
+                <div class="col-sm-12 col-md-4">
                     <a href="https://youtu.be/9ahBMBbFdaA" target="_blank">
                         <img src="assets/img/video.png" class="portada2" alt="video">
                         <br>
@@ -275,8 +285,21 @@
                         <br>
                     </a> 
                 </div>
+                <div class="col-sm-12 col-md-4">
+                    <a href="https://www-ccv.adobe.io/v1/player/ccv/4pKTHqyN67C/embed?api_key=behance1&bgcolor=%23191919" target="_blank">
+                        <img src="assets/img/kit.jpg" class="portada2" alt="videokit">
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                    </a> 
+                </div>
+
+
 
             </div>
+           
 
         </div>
     </section>
