--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
+                
             </div>
             <div class="collapse navbar-collapse justify-content-end pe-4" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
@@ -26,6 +27,7 @@
                     <a class="nav-link px-4" href="#habilidades">Softwares</a>
                     <a class="nav-link px-4" href="#identidad-visual">Branding</a>
                     <a class="nav-link px-4" href="#linea-gráfica">LíneaGráfica</a>
+                    <a class="nav-link px-4" href="#video">Video</a>
                     <a class="nav-link px-4" href="#Portafolio">Web</a>
                     <a class="nav-link px-4" href="#xd">Prototipado</a>
                     <a class="nav-link px-4" href="#educacion">Educación</a>
@@ -50,6 +52,9 @@
                 </p>
                 <div class="mb-3 pb-3 pt-3">
                     <a href="https://drive.google.com/file/d/1DZA0YkawHRtUw5sXzaSojxIA8g0SSAma/view?usp=sharing" class="btn btn-primary" target="_blank">Curriculum</a>
+                </div>
+                <div class="mb-3 pb-3 pt-3">
+                    <a href="https://www.behance.net/gallery/109553687/Portafolio-2020-Ana-Selomit" class="btn btn-primary" target="_blank">Behance</a>
                 </div>
             </div>
         </div>
